--- a/app/src/main/res/layout/activity_fragment_upcoming_contest.xml
+++ b/app/src/main/res/layout/activity_fragment_upcoming_contest.xml
@@ -5,7 +5,10 @@
 
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/contest_refresh">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -186,5 +189,5 @@
 
     </androidx.recyclerview.widget.RecyclerView>
     </RelativeLayout>
-
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </RelativeLayout>
