--- a/app/src/main/res/layout/layout_constellation.xml
+++ b/app/src/main/res/layout/layout_constellation.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
+
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,7 +13,12 @@
     app:cardCornerRadius="10dp"
     app:contentPadding="3dp"
     app:cardElevation="5dp"
-    android:layout_height="wrap_content">
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintDimensionRatio="W,1:1"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    android:layout_height="0dp">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -208,3 +217,4 @@
 
 
 </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
