--- a/app/src/main/res/layout/fragment_edit_contest.xml
+++ b/app/src/main/res/layout/fragment_edit_contest.xml
@@ -143,13 +143,23 @@
 
 
             </LinearLayout>
-
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/text"
+                android:gravity="center"
+                android:textSize="14sp"
+                android:textAlignment="center"
+                android:textColor="@color/grey"
+                android:layout_marginBottom="5dp"
+                android:text="You can edit only Description and Rules of this Contest."
+                android:layout_below="@+id/prizell"/>
 
             <TextView
                 android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/prizell"
+                android:layout_below="@+id/text"
                 android:text="Descritpion:"
                 android:textColor="@color/black"
                 android:textSize="18sp"
