--- a/app/src/main/res/layout/layout_contest_item.xml
+++ b/app/src/main/res/layout/layout_contest_item.xml
@@ -33,9 +33,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal">
                 <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:gravity="left"
-                    android:layout_centerVertical="true"
+                    android:layout_width="wrap_content"
+                    android:gravity="top"
+                    android:id="@+id/gpTv"
                     android:layout_height="wrap_content">
                     <TextView
                         android:layout_width="wrap_content"
@@ -49,8 +49,10 @@
                         android:gravity="center"/>
                 </RelativeLayout>
                 <LinearLayout
+                    android:layout_below="@+id/gpTv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingBottom="2dp"
                     android:layout_gravity="center_horizontal"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
