--- a/app/src/main/res/layout/activity_leaderboard.xml
+++ b/app/src/main/res/layout/activity_leaderboard.xml
@@ -5,11 +5,11 @@
     android:id="@+id/leaderboardActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E5E6EB"
+    android:background="@color/scheme8"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/topBar"
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:background="@drawable/gradient"
@@ -24,9 +24,10 @@
             android:gravity="center_horizontal|bottom"
             android:letterSpacing="0.09"
             android:paddingBottom="10dp"
+            android:textStyle="bold"
             android:text="Leaderboard"
             android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textSize="24sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,8 +41,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="35"
-                android:text="#"
                 android:gravity="center"
+                android:text="#"
                 android:textColor="@color/white"
                 android:textSize="28sp" />
 
@@ -57,8 +58,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="35"
-                android:text="pts"
                 android:gravity="center"
+                android:text="pts"
                 android:textColor="@color/white"
                 android:textSize="28sp" />
         </LinearLayout>
@@ -66,24 +67,76 @@
     </LinearLayout>
 
     <RelativeLayout
-        android:id="@+id/relLayout2"
+        android:id="@+id/userItem"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/linearLayout"
-        android:background="@color/white"
+        android:layout_below="@+id/topBar"
+        android:background="@color/white">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@drawable/arrow_item"
+            android:orientation="horizontal"
+            android:weightSum="10">
+
+            <TextView
+                android:id="@+id/userItemUsername"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:text="PRateek"
+                android:gravity="center_vertical|start"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:paddingStart="25dp"/>
+
+            <TextView
+                android:id="@+id/userItemRank"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="7"
+                android:gravity="center_vertical|end"
+                android:paddingRight="25dp"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                android:textColor="@color/scheme8"
+                android:paddingStart="25dp"/>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/filterBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/userItem"
+        android:background="@drawable/circular_corner_rectangle"
+        android:backgroundTint="@color/scheme8"
         android:gravity="center"
-        android:paddingTop="5dp"
+        android:paddingTop="10dp"
         android:paddingBottom="5dp">
+
+        <View
+            android:id="@+id/scrollDownActive"
+            android:layout_width="55dp"
+            android:layout_height="5dp"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/circular_corner_rectangle"
+            android:backgroundTint="@color/gray_scale" />
 
         <LinearLayout
             android:id="@+id/filter"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/circular_corner_rectangle"
+            android:backgroundTint="@color/white"
             android:elevation="2dp"
             android:gravity="center"
             android:orientation="horizontal"
@@ -143,31 +196,27 @@
 
     </RelativeLayout>
 
-    <ProgressBar
-        android:id="@+id/progress_circular"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_below="@+id/relLayout2"
-        android:layout_centerHorizontal="true"
-        android:visibility="visible"
-        android:indeterminateTint="@android:color/holo_orange_dark"
-        tools:ignore="NotSibling" />
-
-
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swiperefresh"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/filterBox"
+        android:background="@drawable/circular_corner_rectangle"
+        android:backgroundTint="@color/white">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:background="@color/white"
-            android:visibility="gone"
-            android:layout_marginBottom="50dp"
-            android:layout_below="@id/relLayout2"
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/circular_corner_rectangle"
+            android:backgroundTint="@color/white"
+            android:paddingTop="10dp"
+            android:visibility="gone"
             tools:itemCount="10"
-            tools:listitem="@layout/item_leaderboard"
-           />
+            tools:listitem="@layout/item_leaderboard" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <include layout="@layout/layout_bottom_navigation_view" />
 
