--- a/app/src/main/res/layout/item_leaderboard.xml
+++ b/app/src/main/res/layout/item_leaderboard.xml
@@ -7,20 +7,17 @@
     app:cardUseCompatPadding="true"
     app:cardCornerRadius="3dp"
     app:cardElevation="3dp"
-    app:contentPadding="3dp"
-    android:layout_height="wrap_content">
+    android:layout_height="60dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:id="@+id/leaderboardCard"
-            android:layout_height="50dp"
+            android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
             android:weightSum="100">
 
             <TextView
