--- a/app/src/main/res/layout/layout_commets.xml
+++ b/app/src/main/res/layout/layout_commets.xml
@@ -4,9 +4,7 @@
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/white"
     app:cardUseCompatPadding="true"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="10dp"
-    app:contentPadding="3dp"
+    app:cardCornerRadius="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white">
     <RelativeLayout
@@ -14,11 +12,11 @@
         android:layout_height="wrap_content"
 >
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:id="@+id/commet_profile_image"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
         android:src="@drawable/ic_media"
         app:civ_border_color="@color/black"
         app:civ_border_width="0.5dp"/>
@@ -27,15 +25,14 @@
         android:layout_height="wrap_content"
         android:id="@+id/relLayout1"
         android:layout_toRightOf="@+id/commet_profile_image"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="60dp"
-        android:layout_marginBottom="20dp">
-
+        android:layout_marginBottom="5dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -43,17 +40,17 @@
             android:id="@+id/comment_username"
             android:layout_marginLeft="15dp"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textStyle="bold"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="this is a comment"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="15dp"
             android:textColor="@color/black"
-            android:textSize="18sp"
-            android:layout_toRightOf="@+id/comment_username"
+            android:textSize="14sp"
+            android:layout_below="@+id/comment_username"
             android:id="@+id/addcomment"/>
 
         <TextView
@@ -64,9 +61,9 @@
             android:textColor="@color/grey"
             android:id="@+id/comment_time_posted"
             android:layout_below="@+id/addcomment"
-            android:textSize="13sp"
-            android:layout_marginTop="10dp"/>
-            />
+            android:textSize="10sp"
+            android:layout_marginTop="5dp"/>
+
 
 
 
