--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,35 +23,32 @@
 
 
     </RelativeLayout>
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:id="@+id/relLayout3"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/white_grey_border_top">
-
+        android:gravity="center"
+        android:orientation="horizontal">
         <EditText
-            android:id="@+id/comment"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="2dp"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="5dp"
-            android:background="@null"
-            android:hint="Add a comment..."
-            android:padding="2dp"
-            android:textSize="14sp" />
-        <ImageView
+            android:id="@+id/comment"
+            android:layout_weight="1"
+            android:background="@drawable/white_round_button"
+            android:hint="Type Comment..."
+            android:padding="15dp"
+            android:inputType="textMultiLine|textCapSentences"/>
+
+        <ImageButton
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_centerVertical="true"
+            android:background="@null"
             android:src="@drawable/ic_checkmark"
-            android:id="@+id/checkMark"
-            android:layout_alignParentRight="true"/>
+            android:id="@+id/checkMark"/>
 
-
-
-
-    </RelativeLayout>
+    </LinearLayout>
 
 
 </RelativeLayout>
