--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@ tools:context=".home.MainActivity">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/relLayout1">
-        <include layout="@layout/layout_top_tabs"/>
+        <include layout="@layout/layout_top_tabs_main"/>
 
     </RelativeLayout>
     <!--        middle section-->
