--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,22 +16,29 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
+
             android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:id="@+id/l"
+
+                android:background="@drawable/pink_round_button"
+
+                android:layout_height="wrap_content">
             <androidx.recyclerview.widget.RecyclerView
 
                 android:id="@+id/recyclerContest"
-
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/scheme8"
                 android:nestedScrollingEnabled="false"
+
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-
+            </RelativeLayout>
 
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_below="@+id/recyclerContest"
+    android:layout_below="@+id/l"
     android:id="@+id/rel2"
     android:layout_height="wrap_content">
             <RelativeLayout
@@ -45,13 +52,13 @@
                     android:id="@+id/domainBtn"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
-                    android:src="@drawable/ic_star" />
+                    android:src="@drawable/ic_star_black" />
 
                 <ImageView
                     android:id="@+id/domainBtnSel"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
-                    android:src="@drawable/ic_star_filled"
+                    android:src="@drawable/ic_star_color"
                     android:visibility="gone" />
             </RelativeLayout>
 
@@ -102,5 +109,38 @@ android:background="@color/white"
         </RelativeLayout>
     </ScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:id="@+id/pro"
+        android:background="#CC333232"
+        android:visibility="gone"
+        android:orientation="vertical">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/white_border"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_gravity="center">
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                />
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/progressBar"
+                android:layout_centerInParent="true"
+                android:textColor="@color/black"
+                android:text="Deleting..."
+                android:textSize="20sp"
+                />
+        </RelativeLayout>
+    </LinearLayout>
 </RelativeLayout>
