--- a/app/src/main/res/layout/fragment_mainfeed_listitem.xml
+++ b/app/src/main/res/layout/fragment_mainfeed_listitem.xml
@@ -111,7 +111,7 @@
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:layout_centerInParent="true"
-                        android:src="@drawable/ic_star"
+                        android:src="@drawable/ic_star_black"
                         android:visibility="visible" />
 
                     <ImageView
@@ -119,7 +119,7 @@
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:layout_centerInParent="true"
-                        android:src="@drawable/ic_star_filled"
+                        android:src="@drawable/ic_star_color"
                         android:visibility="invisible" />
 
 
@@ -135,8 +135,9 @@
                         android:id="@+id/image_shoutout"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:layout_marginLeft="4dp"
                         android:layout_centerVertical="true"
-                        android:src="@drawable/com"
+                        android:src="@drawable/ic_comment_black"
                         android:visibility="visible" />
                 </RelativeLayout>
 
@@ -169,13 +170,16 @@
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:src="@drawable/ic_promote"
+                    android:src="@drawable/ic_promote_black"
                     android:layout_alignParentRight="true"
+                    android:layout_marginRight="4dp"
                     android:id="@+id/promote"/>
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:src="@drawable/ic_promoted"
+                    android:layout_marginRight="4dp"
+
+                    android:src="@drawable/ic_promote_yellow"
                     android:visibility="gone"
                     android:layout_alignParentRight="true"
                     android:id="@+id/promoted"/>
@@ -286,9 +290,10 @@
                     <ImageView
                         android:layout_width="25dp"
                         android:layout_height="25dp"
-                        android:src="@drawable/unmute"
+                        android:src="@drawable/ic_unmute_black"
                         android:layout_gravity="bottom"
                         android:layout_margin="10dp"
+                        android:visibility="gone"
 
                         android:id="@+id/unmute"
                         />
@@ -299,14 +304,17 @@
                         android:layout_gravity="bottom"
 
                         android:visibility="gone"
-                        android:src="@drawable/mute"
+                        android:src="@drawable/ic_mute_black"
                         android:id="@+id/mute"
                         />
                     <TextView
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:text="12"
-                        android:textColor="#686868"
+                        android:visibility="gone"
+                        android:gravity="center"
+                        android:background="@drawable/ic_white_circle"
+                        android:textColor="#000000"
                         android:layout_gravity="right"
                         android:layout_margin='10dp'
                         android:id="@+id/duration"/>
