--- a/app/src/main/res/layout/layout_bottom_sheet_promote.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet_promote.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
 
@@ -14,12 +15,11 @@
         android:text="Promote Post"
         android:textSize="22sp"
         android:textColor="@color/black"
-        android:textStyle="bold"
         android:gravity="center_horizontal"/>
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/grey"
+        android:layout_height="1dp"
+        android:background="@color/scheme8"
         android:layout_marginBottom="10dp"/>
 
         <ImageView
@@ -67,7 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Promote"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:textColor="#03A9F4"
         android:id="@+id/promote"
         android:layout_gravity="center"
@@ -76,7 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cancel"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:textColor="#000000"
         android:id="@+id/cancel"
         android:layout_gravity="center"
