--- a/app/src/main/res/layout/layout_view_post.xml
+++ b/app/src/main/res/layout/layout_view_post.xml
@@ -24,7 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
 
-                android:background="#0e1111">
+                android:background="@color/scheme8">
 
 
                 <ImageView
@@ -33,7 +33,7 @@
                     android:layout_height="30dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/ic_eclipse_white" />
+                    android:src="@drawable/ic_whilte_eclipse" />
 
                 <TextView
                     android:id="@+id/username1"
@@ -77,7 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/qwe"
-                app:cardBackgroundColor="#0e1111"
+                app:cardBackgroundColor="@color/scheme8"
                 android:layout_below="@+id/relLayout1"
              >
 
@@ -151,9 +151,10 @@
                     <ImageView
                         android:layout_width="25dp"
                         android:layout_height="25dp"
-                        android:src="@drawable/unmute"
+                        android:src="@drawable/ic_unmute_black"
                         android:layout_gravity="bottom"
                         android:layout_margin="10dp"
+                        android:visibility="gone"
 
                         android:id="@+id/unmute"
                         />
@@ -164,13 +165,16 @@
                         android:layout_gravity="bottom"
 
                         android:visibility="gone"
-                        android:src="@drawable/mute"
+                        android:src="@drawable/ic_mute_black"
                         android:id="@+id/mute"
                         />
                     <TextView
                         android:layout_width="25dp"
                         android:layout_height="25dp"
+                        android:background="@drawable/ic_white_circle"
+                        android:gravity="center"
                         android:text="12"
+                        android:visibility="gone"
                         android:textColor="#686868"
                         android:layout_gravity="right"
                         android:layout_margin='10dp'
@@ -222,7 +226,7 @@
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:layout_centerInParent="true"
-                        android:src="@drawable/ic_star"
+                        android:src="@drawable/ic_star_black"
                         android:visibility="visible" />
 
                     <ImageView
@@ -230,7 +234,7 @@
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:layout_centerInParent="true"
-                        android:src="@drawable/ic_star_filled"
+                        android:src="@drawable/ic_star_color"
                         android:visibility="invisible" />
 
 
@@ -246,7 +250,7 @@
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:layout_centerVertical="true"
-                        android:src="@drawable/com"
+                        android:src="@drawable/ic_comment_black"
                         android:visibility="visible" />
                 </RelativeLayout>
 
@@ -260,14 +264,14 @@
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:layout_alignParentRight="true"
-                        android:src="@drawable/ic_promote" />
+                        android:src="@drawable/ic_promote_black" />
 
                     <ImageView
                         android:id="@+id/promoted"
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:layout_alignParentRight="true"
-                        android:src="@drawable/ic_promoted"
+                        android:src="@drawable/ic_promote_yellow"
                         android:visibility="gone" />
                 </RelativeLayout>
 
