--- a/app/src/main/res/layout/promote_item.xml
+++ b/app/src/main/res/layout/promote_item.xml
@@ -20,8 +20,8 @@
         android:layout_width="65dp"
         android:visibility="gone"
         android:layout_height="65dp"
-        app:civ_border_width="3dp"
-        app:civ_border_color="#FFE500"
+        app:civ_border_width="2dp"
+        app:civ_border_color="@color/scheme8"
         android:layout_gravity="center"
         android:src="@drawable/ic_star"
 android:layout_marginTop="5dp"
@@ -31,7 +31,7 @@ android:layout_marginTop="5dp"
 
         android:layout_height="65dp"
         android:visibility="gone"
-        app:civ_border_width="3dp"
+        app:civ_border_width="2dp"
 
         app:civ_border_color="@color/grey"
         android:layout_gravity="center"
