--- a/app/src/main/res/layout/row_chatlist.xml
+++ b/app/src/main/res/layout/row_chatlist.xml
@@ -28,6 +28,7 @@
         android:layout_marginStart="4dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxLines="1"
         android:text="His Name"
         android:textColor="@color/black"
         android:textSize="18sp"
