--- a/app/src/main/res/layout/snippet_comments_toolbar.xml
+++ b/app/src/main/res/layout/snippet_comments_toolbar.xml
@@ -1,4 +1,5 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -14,26 +15,27 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginEnd="20dp"
                     android:layout_centerVertical="true"
                     android:id="@+id/backarrow"
-                    android:src="@drawable/ic_backarrow"
+                    android:src="@drawable/ic_back_black_arrow"
                     android:layout_marginRight="20dp" />
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/comments"
-                    android:layout_toRightOf="@+id/backarrow"
+
+                    android:layout_centerHorizontal="true"
                     android:layout_marginRight="15dp"
                     android:textSize="20sp"
                     android:textColor="#000000"
                     android:layout_centerVertical="true"
                     android:id="@+id/tvComments"
-                    android:layout_toEndOf="@+id/backarrow" />
+                    />
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
 
